<resources>
    <string name="app_name">FitTask</string>

    <string name="add_task">Add Task</string>
    <string name="reps">Reps</string>
    <string name="X">\u0020X\u0020</string>
    <string name="action_placeholder">Exercise</string>
    <string name="amount_placeholder">Sets</string>
    <string name="unit_placeholder">Reps</string>
    <string name="selected_image">Selected Image</string>
    <string name="workout_name">Workout Name</string>
    <string name="exercises">EXERCISES</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="save_workout">Save Workout</string>
    <string name="create_new_workout">Create New Workout</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="workout">Workout</string>
    <string name="facebook_app_id">1499546580081052</string>
    <string name="fb_login_protocol_scheme">fb1499546580081052</string>
    <string name="take_photo">Take Progress Photo</string>
    <string name="progress_photos">Progress Photos</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="notification_channel_task">task</string>
</resources>
