<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <DatePicker
        android:id="@+id/dpDeadline"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_alignParentTop="true"
        android:gravity="center"/>

    <TimePicker
        android:id="@+id/tpDeadline"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/dpDeadline"
        android:timePickerMode="spinner"
        android:gravity="center"/>

    <LinearLayout
        android:layout_below="@id/tpDeadline"
        android:layout_above="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/action_placeholder"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/etAmount"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:hint="@string/amount_placeholder"/>

        <EditText
            android:id="@+id/etUnits"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/unit_placeholder"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/add_task"/>

</RelativeLayout>